static/css/style.css
* {
	-webkit-user-select: none !important;
	-moz-user-select: none !important;
	user-select: none !important;
}

html{font-size: 62.5%}

body{
	 background-image: url('bg_tile.png');
	background-color: #AAA;	
	font-family: 'Open Sans', sans-serif !important;
	text-transform: uppercase;

}

.container
{
	padding-left:0 !important;
	padding-right:0 !important;
}

/*Medium Screens*/
@media (max-width: 900px) { 
	body{
		font-size: 100% !important;
	}
}

/*Medium Screens*/
@media (max-width: 700px) { 
	body{
		font-size: 100% !important;
	}
	
	.album_image{
		padding-top: 1.1em !important;
	}
}

/*Medium Screens*/
@media (max-width: 450px) { 
	body{
		font-size: 85.0% !important;
	}
}

/* SEARCH */
.searchbox{
	width = 100%;
}

/* TRACK LIST */ 
.trackList{
	list-style-type: none;
	margin: 0.5em 1em;
	padding: 0em 0em;
}

/* TRACK ITEM */
.track{
	background-color: #8B8B8B;
	border-radius: 0px !important;
	border-right-style: solid;
	border-right-width: 5px;
	border-right-color: #86FF6A; 

	border-left-style: solid;
	border-left-width: 5px;
	border-left-color: #FB9494; 

	position:relative;

}
.list-group-item{
	background-color: transparent;
	border-width: 0px;
	padding: 0px;
}

.queue_value-container{
	position:relative;
}

.queue_value-container p{
  width:50%;
  height: 50%;
  overflow: auto;
  margin: auto;
  position: absolute;
  top: 0; left: 0; bottom: 0; right: 0; 
}
.album_image{
	margin-right: 1em;
	padding: 5px 0em;
    max-width: 100%;
    height: auto;
    min-width: 48px;     
}

.track_info{
	padding: 0em;
	padding-top: 1em;
	padding-left: 10px;
}

.track_title{
	margin: 0.3em 0em;
	font-size: 2em;
	font-weight: 700;
}

.artist{
	margin-top: 0em;
 	font-size: 1.5em;
 	font-weight: 300;
}


.rating p {
	font-size: 5em;
	font-weight: 700;
    text-transform: uppercase;
    text-shadow: 0.2px 3px 3px rgba(0, 0, 0, 0.14);
}
.good{
	color: #86FF6A;
}
.neutral{
	color: #E8E8E8;
}
.bad{
	color: #FB9494;
}
.user_image-container{
	position: relative;
}

.user_image img{
  width:50%;
  height: 50%;
  overflow: auto;
  margin: auto;
  position: absolutex;
  top: 0; left: 0; bottom: 0; right: 0; 
}

.search_container
{
	width:100%;background-color:#5e5e5e;height:52px;
	box-sizing: border-box;
	text-align:center;
}

.search_container input
{
	width:90%;
	margin: 10px auto;
	font-size: 14px;
	border-radius:20px;
	color: #fff;
	background-color: #424242;
	border:none;
	padding:5px 16px;
	text-transform:uppercase;
	outline:none;
}

.searchList
{
	background-color: #5e5e5e;
}

.searchRow
{
	background-color: #5e5e5e !important;
	color: #fff !important;
	padding:10px;
	border-bottom:1px solid #6c6c6c;
}

.trackAdd
{
	text-align: center;
	font-weight: bold;
	font-size: 40px;
	opacity: 0.6;
}

.searchRow .artist
{
	color: #8c8c8c !important;
}

